Criação do jogo da Cobrinha

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Snake Game</title>
 </head>
 <body>
+    <h2 class="titulo">JOGO DA COBRINHA - USANDO JS</h2>
+    <div class="pontua"></div>
     <div class="jogo">
         <canvas id="snake" width="512" height="512"></canvas>
     </div>
